--- a/app/components/Products/ProductList.module.css
+++ b/app/components/Products/ProductList.module.css
@@ -4,7 +4,8 @@
 
 .productsView {
     position: relative;
-    padding: 1rem;
+    /* padding: 1rem; */
+    max-width: 90%;
 }
 
 .slider {
@@ -14,6 +15,8 @@
 .products {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    width: 100%;
 }
 
 .deal {
